infra/kestra/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kestra
  namespace: kestra
  annotations:
    lbipam.cilium.io/sharing-key: "lan-shared"
    lbipam.cilium.io/sharing-cross-namespace: "*"
    lbipam.cilium.io/ips: "192.168.1.120"
spec:
  type: LoadBalancer
  selector:
    app: kestra
  ports:
    - name: http
      port: 8081
      protocol: TCP
      targetPort: 8080
